# behavioural-modelling

./: .gitignore  404.html  CNAME  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docs.yml  tests.yml
behavioural_modelling/: __init__.py  decision_rules.py  utils.py
behavioural_modelling/learning/: __init__.py  beta_models.py  rescorla_wagner.py
behavioural_modelling/planning/: __init__.py  dynamic_programming.py
docs/: index.md  requirements.txt
docs/examples/decisions/: decision_rules.ipynb
docs/examples/learning/: beta_learning_models.ipynb
docs/javascripts/: mathjax.js
docs/reference/: decision_rules.md  learning.md  planning.md  utils.md
docs/reference/learning/: beta_models.md  rescorla_wagner.md
docs/reference/planning/: dynamic_programming.md
examples/: value_iteration.ipynb
examples/decisions/decision_rules/: index.html
examples/decisions/simulating_choices/: index.html  simulating_choices.ipynb
examples/learning/beta_learning_models/: index.html
examples/planning/value_iteration/: index.html
reference/decision_rules/: index.html
reference/learning/: index.html
reference/learning/beta_models/: index.html
reference/learning/rescorla_wagner/: index.html
reference/planning/: index.html
reference/planning/dynamic_programming/: index.html
reference/utils/: index.html
search/: search_index.json
tests/: test_beta_learning.py  test_decision_rules.py  test_rescorla_wagner.py  test_utils.py
